{
    "name": "JukeBox",
    "maps": [
        {
            "name": "JukeBoxMap",
            "id": "610e5aa3-aa77-471e-a90d-bce94f338f74",
            "actions": [
                {
                    "name": "Select1",
                    "type": "Button",
                    "id": "760c3642-24ef-4e94-9206-ebe2fb28e6c2",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Select2",
                    "type": "Button",
                    "id": "59e919f3-f9ef-40b1-8dce-5a2e5a33f781",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Select3",
                    "type": "Button",
                    "id": "7b91bcb5-51cb-4cd4-ae05-a85593be69b4",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Select4",
                    "type": "Button",
                    "id": "445a23ae-e286-466d-945d-935bfe6f7da4",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Shuffle",
                    "type": "Button",
                    "id": "8a5c82be-8ae1-437a-99d0-af9445f69ace",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Pause",
                    "type": "Button",
                    "id": "895cb959-6308-4cbb-8d86-a27f7d949319",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "VolumeControl",
                    "type": "Value",
                    "id": "7d4f318a-8355-4c20-9cf9-297bb5aa2f8a",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "17905359-86d1-457b-bda7-061db3c74c17",
                    "path": "<Keyboard>/1",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Select1",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "9a8a2828-b941-4d5e-b64a-3882ae5cfad7",
                    "path": "<Keyboard>/2",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Select2",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "c373cdb1-d14a-4a9a-9324-5a819d40f016",
                    "path": "<Keyboard>/3",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Select3",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "4eec234b-14bb-4f4e-8433-318bc953b1bb",
                    "path": "<Keyboard>/4",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Select4",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "71f092f3-a832-42aa-99b7-c5a3e0a6cb48",
                    "path": "<Keyboard>/0",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Shuffle",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "0aa2f4fd-0f6d-42c0-a640-06a425fd5fa0",
                    "path": "<Keyboard>/p",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Pause",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "Keyboard",
                    "id": "f27c94d1-7232-4f6f-ae73-e375a121c68c",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "VolumeControl",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "84b002aa-8f09-4ba7-9246-6498385691e0",
                    "path": "<Keyboard>/minus",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "VolumeControl",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "6defee32-4d68-4b47-af33-bf141550571f",
                    "path": "<Keyboard>/equals",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "VolumeControl",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "Numpad",
                    "id": "7fd8f980-74d2-4112-b02a-501b41c7299e",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "VolumeControl",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "0e7f3df8-f742-4b76-882a-d6a8fee0eda5",
                    "path": "<Keyboard>/numpadMinus",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "VolumeControl",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "ac7d1d0e-f593-4bf0-83a9-7dba81329247",
                    "path": "<Keyboard>/numpadPlus",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "VolumeControl",
                    "isComposite": false,
                    "isPartOfComposite": true
                }
            ]
        }
    ],
    "controlSchemes": []
}